syntax = "proto3";

package pb;

option go_package = "github.com/suhailmuhammed157/simple_bank/pb";
import "user.proto";
import "account.proto";

service SimpleBank{
    //---------User-------------
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc Login (LoginUserRequest) returns (LoginUserResponse);
    rpc GetUserDetails (GetUserDetailsRequest) returns (GetUserDetailsResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc VerifyUser (VerifyUserRequest) returns (VerifyUserResponse);
    
    //---------Account-------------
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
    rpc GetAccountDetails (Empty) returns (GetAccountDetailsResponse);
    rpc ListAccounts (ListAccountRequest) returns (ListAccountResponse);
}